--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,12 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+streamlit = "^1.41.1"
+requests = "^2.32.3"
+pandas = "^2.2.3"
+seaborn = "^0.13.2"
+plotly = "^5.24.1"
+jason = "^0.1.7"
 
 
 [build-system]
